--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,5 @@ COOKIE_SECRET=<SECRET>
 JWT_SECRET=<SECRET>
 MONGO_URL=<URL-MONGGODBB>
 COOKIE_NAME=<SECRET>
+DATABASE_NAME=<SECRET>
+NEWS_API_KEY=<SECRET>
