--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "NODE_ENV=test echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "create-database": "mongo && use %DATABASE_NAME%"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
