--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "private": true,
   "scripts": {
     "test": "NODE_ENV=test echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +26,47 @@
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "bootstrap": "4.4.1",
+    "normalize.css": "8.0.1",
+    "animate-sass": "0.8.2",
+    "webpack-notifier": "^1.6.0",
+    "webpack": "4.1.0",
+    "webpack-cli": "3.3.11",
+    "autoprefixer": "9.4.4",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
+    "babel-plugin-add-module-exports": "1.0.0",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-preset-env": "1.7.0",
+    "clean-webpack-plugin": "1.0.1",
+    "css-loader": "2.1.0",
+    "eslint": "5.15.3",
+    "eslint-config-standard": "12.0.0",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-standard": "4.0.0",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "3.0.1",
+    "html-loader": "0.5.5",
+    "html-webpack-inline-source-plugin": "0.0.10",
+    "html-webpack-plugin": "3.2.0",
+    "image-webpack-loader": "4.6.0",
+    "load-grunt-tasks": "4.0.0",
+    "mini-css-extract-plugin": "0.5.0",
+    "node-sass": "4.11.0",
+    "nodemon": "1.18.10",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "path": "0.12.7",
+    "postcss-loader": "3.0.0",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.1",
+    "uglifyjs-webpack-plugin": "2.1.1",
+    "url-loader": "1.1.2",
+    "webpack-manifest-plugin": "2.0.4",
+    "webpack-md5-hash": "0.0.6"
   }
 }
